# dds-cash

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
dds_app/: admin.py  apps.py  models.py  permissions.py  serializer.py  urls.py  validators.py  views.py
dds_app/management/commands/: load_initial_data.py
dds_app/migrations/: 0001_initial.py
